# strides-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_activity_analysis_columns.py  003_user_notes.py  004_deep_dive_model.py  005_hevy_columns.py  006_exercise_templates.py  007_avg_rpe.py  007_source_column.py  008_rename_hevy_workout_id.py
strides_ai/: activity_types.py  analysis.py  auth.py  charts_data.py  charts_lifting.py  cli.py  coach.py  config.py  db.py  hevy_analysis.py  hevy_sync.py  modes.py  profile.py  schedule.py  sync.py  units.py
strides_ai/api/: app.py  deps.py  server.py
strides_ai/api/routers/: activities.py  analysis.py  calendar.py  charts.py  chat.py  hevy.py  history.py  memories.py  profile.py  settings.py  status.py  sync.py
strides_ai/backends/: __init__.py  base.py  claude.py  gemini.py  ollama.py  openai.py
strides_ai/db/: __init__.py  activities.py  calendar.py  conversations.py  engine.py  exercise_templates.py  memories.py  models.py  profiles.py  settings.py
strides_ai/sources/: __init__.py  base.py  hevy.py  strava.py
tests/: conftest.py  test_analysis.py  test_backends.py  test_charts_data.py  test_charts_lifting.py  test_coach.py  test_db.py  test_db_calendar.py  test_db_exercise_templates.py  test_hevy.py  test_profile.py  test_schedule.py  test_source_registry.py  test_units.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  UnitsContext.tsx  index.css  main.tsx  units.ts
web/src/charts/: ChartCard.tsx  FilterBar.tsx  ScatterTrendCard.tsx  StackedBarCard.tsx  TimeSeriesLineCard.tsx  WeeklyBarCard.tsx  dateFilter.ts  tokens.ts
web/src/pages/: Activities.tsx  Calendar.tsx  Charts.tsx  Chat.tsx  Profile.tsx  Settings.tsx
web/src/pages/charts/: CardioCharts.tsx  LiftingCharts.tsx
