[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strides-ai"
version = "0.1.0"
description = "Local Strava coaching app powered by Claude"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "matplotlib>=3.7",
    "sqlmodel>=0.0.21",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
]

[project.scripts]
strides-ai = "strides_ai.cli:main"
strides-ai-web = "strides_ai.api.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "black>=24.0", "pre-commit>=3.0"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.hatch.build.targets.wheel]
packages = ["strides_ai"]
